--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-community-detail/04-pages-community-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-community-detail/04-pages-community-detail.html
@@ -523,20 +523,6 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                        <div class="card__author-name">Buffy Summers</div>
-                        <div class="card__author-date">03/15/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>                  </div>
-                  <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
                     <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
@@ -551,7 +537,21 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://forumone.com/">Card Title</a></h3>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                        <div class="card__author-name">Buffy Summers</div>
+                        <div class="card__author-date">03/15/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>                  </div>
+                  <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -586,35 +586,6 @@
                   <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/1/" alt="Card 5:3" height="300" width="500">
-</a>
-                  </div>
-                  <div class="card__content">
-                    <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
-                    <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p></div>
-                    <div class="card__counts">
-                      <div class="view">
-                        <div class="has-icon--evidence" title="Evidence">0</div>
-                      </div>
-                      <div class="view">
-                        <div class="has-icon--comment" title="Comments">12</div>
-                      </div>
-                      <div class="view">
-                        <div class="has-icon--funding" title="Funding">5</div>
-                      </div>
-                      <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">6</div>
-                      </div>
-                      <div class="view">
-                        <div class="has-icon--assistance" title="Assistance">1</div>
-                      </div>
-                    </div>
-                  </div>
-                </article>
-                  </div>
-                  <div class="views-row">
-                <article class="card">
-                  <div class="card__image">
                     <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/business/1/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
@@ -644,12 +615,41 @@
                   <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/2/" alt="Card 5:3" height="300" width="500">
+</a>
+                  </div>
+                  <div class="card__content">
+                    <h3 class="card__title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
+                    <div><p>Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.</p></div>
+                    <div class="card__counts">
+                      <div class="view">
+                        <div class="has-icon--evidence" title="Evidence">0</div>
+                      </div>
+                      <div class="view">
+                        <div class="has-icon--comment" title="Comments">12</div>
+                      </div>
+                      <div class="view">
+                        <div class="has-icon--funding" title="Funding">5</div>
+                      </div>
+                      <div class="view">
+                        <div class="has-icon--favorite" title="Favorites">6</div>
+                      </div>
+                      <div class="view">
+                        <div class="has-icon--assistance" title="Assistance">1</div>
+                      </div>
+                    </div>
+                  </div>
+                </article>
+                  </div>
+                  <div class="views-row">
+                <article class="card">
+                  <div class="card__image">
+                    <a href="http://forumone.com/"><img src="http://lorempixel.com/500/300/city/1/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
                     <h3 class="card__title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
-                    <div><p>Fusce euismod ultricies mauris eget pellentesque. Curabitur mauris eros, pretium condimentum diam id, vulputate condimentum diam. Quisque viverra massa sed lorem ultrices gravida vel quis velit.</p></div>
+                    <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a lectus erat. Cras leo urna, fermentum ac lacus ac, pharetra gravida sapien.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -685,7 +685,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -785,7 +785,7 @@
                   <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Really, Really Much Much Longer Card Title</a></h3>
+                    <h3 class="card__primary-title"><a href="http://forumone.com/">A Longer Card Title</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
