--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
@@ -96,21 +96,7 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
-                        <div class="card__author-name">Buffy Summers</div>
-                        <div class="card__author-date">03/15/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
                         <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -148,6 +134,20 @@
                     </div>
                   </div>
                 </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
+                        <div class="card__author-name">Buffy Summers</div>
+                        <div class="card__author-date">03/15/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
           </div>
         </div>
       </div>
@@ -159,12 +159,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
-                    <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
+                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+                    <div><p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -188,12 +188,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://lorizzle.nl/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
-                    <div><p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Semper velit sizzle fo.</p></div>
+                    <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                    <div><p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -217,12 +217,12 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__image">
-                    <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-                    <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+                    <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                    <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
                     <div class="card__counts">
                       <div class="view">
                         <div class="has-icon--evidence" title="Evidence">0</div>
@@ -258,7 +258,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -288,7 +288,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
+                    <h3 class="card__primary-title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -318,7 +318,7 @@
                 <article class="card">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                    <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
                     <div class="card__author">
                       <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                       <div class="card__author-name">Buffy Summers</div>
@@ -358,7 +358,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                    <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
@@ -390,7 +390,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
+                    <h3 class="card__primary-title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
@@ -422,7 +422,7 @@
               <div class="views-row">
                 <article class="card">
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+                    <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
                     <div class="card__number">$30,000,000</div>
                     <div class="card__due-date">Due by: 3/21/2015</div> 
                     <div class="card__list">
